[package]
name = "clearcomm"
version = "0.2.0"
edition = "2023"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-std = "1.12"
thiserror = "1.0"
argon2 = "0.5"  # For password hashing
jwt = "0.16"    # For authentication tokens
uuid = { version = "1.3", features = ["v4"] }
bytes = "1.4"   # For file handling
cpal = "0.15"   # For audio capture/playback
opus = "0.3"    # For voice compression
rand = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
base64 = "0.21"